[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts-C/MenuSup.gd" type="Script" id=1]
[ext_resource path="res://Imagens/Botoes/config.png" type="Texture" id=2]
[ext_resource path="res://Imagens/Botoes/config_c.png" type="Texture" id=3]
[ext_resource path="res://Imagens/Botoes/config_h.png" type="Texture" id=4]
[ext_resource path="res://Imagens/Botoes/home.png" type="Texture" id=5]
[ext_resource path="res://Imagens/Botoes/home_c.png" type="Texture" id=6]
[ext_resource path="res://Imagens/Botoes/home_h.png" type="Texture" id=7]
[ext_resource path="res://Imagens/Botoes/som.png" type="Texture" id=8]
[ext_resource path="res://Imagens/Botoes/som_c.png" type="Texture" id=9]
[ext_resource path="res://Imagens/Botoes/som_h.png" type="Texture" id=10]
[ext_resource path="res://Imagens/Botoes/sair.png" type="Texture" id=11]
[ext_resource path="res://Imagens/Botoes/sair_c.png" type="Texture" id=12]
[ext_resource path="res://Imagens/Botoes/sair_h.png" type="Texture" id=13]

[node name="Opcoes" type="Control"]
margin_left = 1350.0
margin_top = 48.0
margin_right = 1920.0
margin_bottom = 134.0
script = ExtResource( 1 )

[node name="Opc" type="TextureButton" parent="."]
margin_left = 114.0
margin_right = 230.0
margin_bottom = 115.0
rect_scale = Vector2( 0.712, 0.712 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Home" type="TextureButton" parent="."]
margin_left = 237.0
margin_right = 724.0
margin_bottom = 476.0
rect_scale = Vector2( 0.172, 0.172 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="Mute" type="TextureButton" parent="."]
margin_left = 351.0
margin_right = 845.0
margin_bottom = 499.0
rect_scale = Vector2( 0.164, 0.164 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[node name="Sair" type="TextureButton" parent="."]
margin_left = 465.0
margin_right = 942.0
margin_bottom = 476.0
rect_scale = Vector2( 0.172, 0.172 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 13 )
[connection signal="pressed" from="Opc" to="." method="_on_Opc_pressed"]
[connection signal="pressed" from="Home" to="." method="_on_Home_pressed"]
[connection signal="button_up" from="Mute" to="." method="_on_Mute_button_up"]
[connection signal="button_up" from="Sair" to="." method="_on_Sair_button_up"]
